--- a/connections/create-connections.ipynb
+++ b/connections/create-connections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating connection aoai-connection...\n",
+      "name: aoai-connection\n",
+      "module: promptflow.connections\n",
+      "created_date: '2024-04-11T10:55:33.907233'\n",
+      "last_modified_date: '2024-04-12T13:12:42.301700'\n",
+      "type: azure_open_ai\n",
+      "api_key: '******'\n",
+      "api_base: https://contoso-chat-sf-ai-aiservices7rue5nygzk4ym.openai.azure.com/\n",
+      "api_type: azure\n",
+      "api_version: 2023-03-15-preview\n",
+      "auth_mode: key\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Create local Azure OpenAI Connection\n",
     "AOAI_KEY= os.environ[\"CONTOSO_AI_SERVICES_KEY\"]\n",
@@ -36,7 +55,7 @@
     "    api_key=AOAI_KEY,\n",
     "    api_base=AOAI_ENDPOINT,\n",
     "    api_type=\"azure\",\n",
-    "    api_version=\"2023-07-01-preview\",\n",
+    "    api_version=\"2023-03-15-preview\",\n",
     ")\n",
     "\n",
     "print(f\"Creating connection {connection.name}...\")\n",
@@ -46,9 +65,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating connection contoso-cosmos...\n",
+      "name: contoso-cosmos\n",
+      "module: promptflow.connections\n",
+      "created_date: '2024-04-11T10:57:13.602415'\n",
+      "last_modified_date: '2024-04-12T12:38:25.597264'\n",
+      "type: custom\n",
+      "configs:\n",
+      "  endpoint: https://cosmos-contoso-7rue5nygzk4ym.documents.azure.com:443/\n",
+      "  databaseId: contoso-outdoor\n",
+      "  containerId: customers\n",
+      "secrets:\n",
+      "  key: '******'\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the local contoso-cosmos connection\n",
     "COSMOS_ENDPOINT = os.environ[\"COSMOS_ENDPOINT\"]\n",
@@ -70,9 +109,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating connection contoso-search...\n",
+      "name: contoso-search\n",
+      "module: promptflow.connections\n",
+      "created_date: '2024-04-11T10:59:17.969532'\n",
+      "last_modified_date: '2024-04-12T12:38:25.698135'\n",
+      "type: cognitive_search\n",
+      "api_key: '******'\n",
+      "api_base: https://contoso-chat-dev-swecen-search-contoso7rue5nygzk4ym.search.windows.net/\n",
+      "api_version: 2023-07-01-preview\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the local contoso-search connection\n",
     "SEARCH_ENDPOINT = os.environ[\"CONTOSO_SEARCH_ENDPOINT\"]\n",
@@ -91,9 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Skipping support connection creation, missing environment variables\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the local contoso-search connection\n",
     "SUPPORT_ENDPOINT = os.environ.get(\"SUPPORT_ENDPOINT\", \"\")\n",
@@ -119,9 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping chat connection creation, missing environment variables\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the local contoso-search connection\n",
     "CHAT_ENDPOINT = os.environ.get(\"CHAT_ENDPOINT\", \"\")\n",
