--- a/deployment/push_and_deploy_pf.ipynb
+++ b/deployment/push_and_deploy_pf.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found the config file in: ../config.json\n"
+     ]
+    }
+   ],
    "source": [
     "config_path = \"../config.json\"\n",
     "from promptflow.azure import PFClient\n",
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flow created successfully:\n",
+      "{\n",
+      "    \"name\": \"09f3f303-2f53-4044-9836-da9d1e422d52\",\n",
+      "    \"type\": \"chat\",\n",
+      "    \"path\": \"Users/g.becht/promptflow/contoso-chat-04-12-2024-13-04-18/flow.dag.yaml\",\n",
+      "    \"code\": \"azureml://locations/swedencentral/workspaces/58118531-5989-4e1b-81dc-c734d18e7d7c/flows/09f3f303-2f53-4044-9836-da9d1e422d52\",\n",
+      "    \"display_name\": \"contoso-chat-2024-04-12-13-04-18\",\n",
+      "    \"owner\": {\n",
+      "        \"user_object_id\": \"932e47d7-473b-4149-adba-b92ff1bd2507\",\n",
+      "        \"user_tenant_id\": \"b5327df0-2ed0-42e1-8dc1-7e602c0b8dd7\",\n",
+      "        \"user_name\": \"Gijs Becht\"\n",
+      "    },\n",
+      "    \"is_archived\": false,\n",
+      "    \"created_date\": \"2024-04-12 13:04:22.792957+00:00\",\n",
+      "    \"flow_portal_url\": \"https://ai.azure.com/projectflows/09f3f303-2f53-4044-9836-da9d1e422d52/58118531-5989-4e1b-81dc-c734d18e7d7c/details/Flow?wsid=/subscriptions/1e65ec0a-fc99-42e0-a0b7-9969d3ce9c8f/resourcegroups/rg-contoso-chat-dev-swecen/providers/Microsoft.MachineLearningServices/workspaces/contoso-chat-sf-aiproj\"\n",
+      "}\n",
+      "Creating prompt flow <promptflow.azure._entities._flow.Flow object at 0x7f0eff16e4d0>\n"
+     ]
+    }
+   ],
    "source": [
     "contoso_chat_flow = pf_azure_client.flows.create_or_update(\n",
     "    flow=flow,\n",
